# gateway-api-rs

./: Cargo.toml  README.md  update.sh
gateway-api/: Cargo.toml
gateway-api-inference-extension/: Cargo.toml  Cargo.toml~
gateway-api-inference-extension/src/: lib.rs
gateway-api-with-extensions/: Cargo.toml  Cargo.toml~
gateway-api-with-extensions/src/: duration.rs  lib.rs
gateway-api/src/: lib.rs
gateway-api/src/experimental/: common.rs  enum_defaults.rs  grpcroutes.rs  httproutes.rs  listenersets.rs  mod.rs  tlsroutes.rs  udproutes.rs
gateway-api/src/standard/: common.rs  enum_defaults.rs  gateways.rs  httproutes.rs  listenersets.rs  mod.rs
scripts/generators/: enums_generator.sh  experimental_enum_names.txt  experimental_inference_enum_names.txt  gateway_experimental.sh  gateway_generator.sh  gateway_standard.sh  generate_all.sh  generate_gateway.sh  generate_gateway_with_extensions.sh  generate_inference_only.sh  inference_generator.sh  (+6 more)
type-reducer/: experimental_customized_mapped_names.txt  experimental_ignorable_mapped_names.txt  experimental_reduced_types_pass_1.txt  experimental_reduced_types_pass_2.txt  experimental_reduced_types_pass_3.txt  experimental_reduced_types_pass_4.txt  experimental_reduced_types_pass_5.txt  one_liners.txt  sorted_experimental_customized_mapped_names.txt  sorted_unique_standard_customized_mapped_names.txt  standard_customized_mapped_names.txt  standard_reduced_types_pass_1.txt  standard_reduced_types_pass_2.txt  standard_reduced_types_pass_3.txt  standard_reduced_types_pass_4.txt  standard_reduced_types_pass_5.txt
(+25 files in other folders)
